# spoj-hs

TEST/: TEST.cabal
TEST/src/: Main.hs
