name:                TEST
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/parallellink/TEST#readme
license:             BSD3
license-file:        LICENSE
author:              parallellink
maintainer:          parallellink@outlook.com
copyright:           2016 parallellink
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable TEST
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
